// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/descriptions/demo/basic.vue correctly 1`] = `
<div class="ant-descriptions">
  <div class="ant-descriptions-header">
    <div class="ant-descriptions-title">User Info</div>
    <!---->
  </div>
  <div class="ant-descriptions-view">
    <table>
      <tbody>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item" colspan="1">
            <div class="ant-descriptions-item-container"><span class="ant-descriptions-item-label">UserName</span><span class="ant-descriptions-item-content">Zhou Maomao</span></div>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item" colspan="1">
            <div class="ant-descriptions-item-container"><span class="ant-descriptions-item-label">Telephone</span><span class="ant-descriptions-item-content">1810000000</span></div>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item" colspan="1">
            <div class="ant-descriptions-item-container"><span class="ant-descriptions-item-label">Live</span><span class="ant-descriptions-item-content">Hangzhou, Zhejiang</span></div>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item" colspan="1">
            <div class="ant-descriptions-item-container"><span class="ant-descriptions-item-label">Remark</span><span class="ant-descriptions-item-content">empty</span></div>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item" colspan="1">
            <div class="ant-descriptions-item-container"><span class="ant-descriptions-item-label">Address</span><span class="ant-descriptions-item-content"> No. 18, Wantang Road, Xihu District, Hangzhou, Zhejiang, China </span></div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders ./components/descriptions/demo/border.vue correctly 1`] = `
<div class="ant-descriptions ant-descriptions-bordered">
  <div class="ant-descriptions-header">
    <div class="ant-descriptions-title">User Info</div>
    <!---->
  </div>
  <div class="ant-descriptions-view">
    <table>
      <tbody>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Product</span>
            <!---->
          </th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>Cloud Database</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Billing Mode</span>
            <!---->
          </th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>Prepaid</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Automatic Renewal</span>
            <!---->
          </th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>YES</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Order time</span>
            <!---->
          </th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>2018-04-24 18:00:00</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Usage Time</span>
            <!---->
          </th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>2019-04-24 18:00:00</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Status</span>
            <!---->
          </th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span><span class="ant-badge ant-badge-status ant-badge-not-a-wrapper"><span class="ant-badge-status-dot ant-badge-status-processing"></span><span class="ant-badge-status-text">Running</span></span></span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Negotiated Amount</span>
            <!---->
          </th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>$80.00</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Discount</span>
            <!---->
          </th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>$20.00</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Official Receipts</span>
            <!---->
          </th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>$60.00</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Config Info</span>
            <!---->
          </th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span> Data disk type: MongoDB <br> Database version: 3.4 <br> Package: dds.mongo.mid <br> Storage space: 10 GB <br> Replication factor: 3 <br> Region: East China 1 <br></span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders ./components/descriptions/demo/responsive.vue correctly 1`] = `
<div class="ant-descriptions ant-descriptions-bordered">
  <div class="ant-descriptions-header">
    <div class="ant-descriptions-title">Responsive Descriptions</div>
    <!---->
  </div>
  <div class="ant-descriptions-view">
    <table>
      <tbody>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Product</span>
            <!---->
          </th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>Cloud Database</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Billing</span>
            <!---->
          </th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>Prepaid</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Time</span>
            <!---->
          </th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>18:00:00</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Amount</span>
            <!---->
          </th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>$80.00</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Discount</span>
            <!---->
          </th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>$20.00</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Official</span>
            <!---->
          </th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>$60.00</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Config Info</span>
            <!---->
          </th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span> Data disk type: MongoDB <br> Database version: 3.4 <br> Package: dds.mongo.mid <br> Storage space: 10 GB <br> Replication factor: 3 <br> Region: East China 1 </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders ./components/descriptions/demo/size.vue correctly 1`] = `
<div>
  <div class="ant-radio-group ant-radio-group-outline"><label class="ant-radio-wrapper ant-radio-wrapper-checked"><span class="ant-radio ant-radio-checked"><input type="radio" class="ant-radio-input" value="default"><span class="ant-radio-inner"></span></span><span>default</span></label><label class="ant-radio-wrapper"><span class="ant-radio"><input type="radio" class="ant-radio-input" value="middle"><span class="ant-radio-inner"></span></span><span>middle</span></label><label class="ant-radio-wrapper"><span class="ant-radio"><input type="radio" class="ant-radio-input" value="small"><span class="ant-radio-inner"></span></span><span>small</span></label></div><br><br>
  <div class="ant-descriptions ant-descriptions-bordered">
    <div class="ant-descriptions-header">
      <div class="ant-descriptions-title">Custom Size</div>
      <div class="ant-descriptions-extra"><button class="ant-btn ant-btn-primary" type="button">
          <!----><span>Edit</span>
        </button></div>
    </div>
    <div class="ant-descriptions-view">
      <table>
        <tbody>
          <tr class="ant-descriptions-row">
            <th class="ant-descriptions-item-label" colspan="1"><span>Product</span>
              <!---->
            </th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!----><span>Cloud Database</span>
            </td>
          </tr>
          <tr class="ant-descriptions-row">
            <th class="ant-descriptions-item-label" colspan="1"><span>Billing</span>
              <!---->
            </th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!----><span>Prepaid</span>
            </td>
          </tr>
          <tr class="ant-descriptions-row">
            <th class="ant-descriptions-item-label" colspan="1"><span>Time</span>
              <!---->
            </th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!----><span>18:00:00</span>
            </td>
          </tr>
          <tr class="ant-descriptions-row">
            <th class="ant-descriptions-item-label" colspan="1"><span>Amount</span>
              <!---->
            </th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!----><span>$80.00</span>
            </td>
          </tr>
          <tr class="ant-descriptions-row">
            <th class="ant-descriptions-item-label" colspan="1"><span>Discount</span>
              <!---->
            </th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!----><span>$20.00</span>
            </td>
          </tr>
          <tr class="ant-descriptions-row">
            <th class="ant-descriptions-item-label" colspan="1"><span>Official</span>
              <!---->
            </th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!----><span>$60.00</span>
            </td>
          </tr>
          <tr class="ant-descriptions-row">
            <th class="ant-descriptions-item-label" colspan="1"><span>Config Info</span>
              <!---->
            </th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!----><span> Data disk type: MongoDB <br> Database version: 3.4 <br> Package: dds.mongo.mid <br> Storage space: 10 GB <br> Replication factor: 3 <br> Region: East China 1 <br></span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div><br><br>
  <div class="ant-descriptions">
    <div class="ant-descriptions-header">
      <div class="ant-descriptions-title">Custom Size</div>
      <div class="ant-descriptions-extra"><button class="ant-btn ant-btn-primary" type="button">
          <!----><span>Edit</span>
        </button></div>
    </div>
    <div class="ant-descriptions-view">
      <table>
        <tbody>
          <tr class="ant-descriptions-row">
            <td class="ant-descriptions-item" colspan="1">
              <div class="ant-descriptions-item-container"><span class="ant-descriptions-item-label">Product</span><span class="ant-descriptions-item-content">Cloud Database</span></div>
            </td>
          </tr>
          <tr class="ant-descriptions-row">
            <td class="ant-descriptions-item" colspan="1">
              <div class="ant-descriptions-item-container"><span class="ant-descriptions-item-label">Billing</span><span class="ant-descriptions-item-content">Prepaid</span></div>
            </td>
          </tr>
          <tr class="ant-descriptions-row">
            <td class="ant-descriptions-item" colspan="1">
              <div class="ant-descriptions-item-container"><span class="ant-descriptions-item-label">Time</span><span class="ant-descriptions-item-content">18:00:00</span></div>
            </td>
          </tr>
          <tr class="ant-descriptions-row">
            <td class="ant-descriptions-item" colspan="1">
              <div class="ant-descriptions-item-container"><span class="ant-descriptions-item-label">Amount</span><span class="ant-descriptions-item-content">$80.00</span></div>
            </td>
          </tr>
          <tr class="ant-descriptions-row">
            <td class="ant-descriptions-item" colspan="1">
              <div class="ant-descriptions-item-container"><span class="ant-descriptions-item-label">Discount</span><span class="ant-descriptions-item-content">$20.00</span></div>
            </td>
          </tr>
          <tr class="ant-descriptions-row">
            <td class="ant-descriptions-item" colspan="1">
              <div class="ant-descriptions-item-container"><span class="ant-descriptions-item-label">Official</span><span class="ant-descriptions-item-content">$60.00</span></div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`renders ./components/descriptions/demo/vertical.vue correctly 1`] = `
<div class="ant-descriptions">
  <div class="ant-descriptions-header">
    <div class="ant-descriptions-title">User Info</div>
    <!---->
  </div>
  <div class="ant-descriptions-view">
    <table>
      <tbody>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item" colspan="1">
            <div class="ant-descriptions-item-container"><span class="ant-descriptions-item-label">UserName</span>
              <!---->
            </div>
          </th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item" colspan="1">
            <div class="ant-descriptions-item-container">
              <!----><span class="ant-descriptions-item-content">Zhou Maomao</span>
            </div>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item" colspan="1">
            <div class="ant-descriptions-item-container"><span class="ant-descriptions-item-label">Telephone</span>
              <!---->
            </div>
          </th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item" colspan="1">
            <div class="ant-descriptions-item-container">
              <!----><span class="ant-descriptions-item-content">1810000000</span>
            </div>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item" colspan="1">
            <div class="ant-descriptions-item-container"><span class="ant-descriptions-item-label">Live</span>
              <!---->
            </div>
          </th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item" colspan="1">
            <div class="ant-descriptions-item-container">
              <!----><span class="ant-descriptions-item-content">Hangzhou, Zhejiang</span>
            </div>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item" colspan="1">
            <div class="ant-descriptions-item-container"><span class="ant-descriptions-item-label">Address</span>
              <!---->
            </div>
          </th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item" colspan="1">
            <div class="ant-descriptions-item-container">
              <!----><span class="ant-descriptions-item-content"> No. 18, Wantang Road, Xihu District, Hangzhou, Zhejiang, China </span>
            </div>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item" colspan="1">
            <div class="ant-descriptions-item-container"><span class="ant-descriptions-item-label">Remark</span>
              <!---->
            </div>
          </th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item" colspan="1">
            <div class="ant-descriptions-item-container">
              <!----><span class="ant-descriptions-item-content">empty</span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders ./components/descriptions/demo/vertical-border.vue correctly 1`] = `
<div class="ant-descriptions ant-descriptions-bordered">
  <div class="ant-descriptions-header">
    <div class="ant-descriptions-title">User Info</div>
    <!---->
  </div>
  <div class="ant-descriptions-view">
    <table>
      <tbody>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Product</span>
            <!---->
          </th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>Cloud Database</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Billing Mode</span>
            <!---->
          </th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>Prepaid</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Automatic Renewal</span>
            <!---->
          </th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>YES</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Order time</span>
            <!---->
          </th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>2018-04-24 18:00:00</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Usage Time</span>
            <!---->
          </th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>2019-04-24 18:00:00</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Status</span>
            <!---->
          </th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span><span class="ant-badge ant-badge-status ant-badge-not-a-wrapper"><span class="ant-badge-status-dot ant-badge-status-processing"></span><span class="ant-badge-status-text">Running</span></span></span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Negotiated Amount</span>
            <!---->
          </th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>$80.00</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Discount</span>
            <!---->
          </th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>$20.00</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Official Receipts</span>
            <!---->
          </th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span>$60.00</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label" colspan="1"><span>Config Info</span>
            <!---->
          </th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item-content" colspan="1">
            <!----><span> Data disk type: MongoDB <br> Database version: 3.4 <br> Package: dds.mongo.mid <br> Storage space: 10 GB <br> Replication factor: 3 <br> Region: East China 1 <br></span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
